fixed bug in auth that wasn't rejecting errors and fixed attention height on mobile

--- a/src/styles/components/_attention.scss
+++ b/src/styles/components/_attention.scss
@@ -5,7 +5,6 @@
 
   @include respond(phone) {
     max-height: 70vh;
-    margin-top: -12vh;
   }
 
   &__overlay {
